_sass/_includes/_header.scss
// - - - - - - - - - - - - - - - - - -

// Header + menu

// - - - - - - - - - - - - - - - - - -



// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Header

.header {
	padding: 20px;

	@include mq(tabletp) {
		padding: 40px;
	}

	@include mq(tabletl) {
		position: fixed;
		overflow: auto;
		top: 0;
		left: 0;
		bottom: 0;
		width: 30%;
		padding: 0;
	}
}

.header__content {

	@include mq(tabletl) {
		position: relative;
		min-height: 100vh;
		padding: 40px 40px 135px;
	}

	@include mq(laptop) {
		padding: 60px 60px 145px;
	}
}

.header__logo {
	display: block;
	width: $logo-width;
	max-width: 80%;

	@include mq(tabletp) {
		float: left;
		max-width: 50%;
	}
}

.header__logo__img {
	width: 100%;
	height: auto;
}

.header__title {
	font-size: $sitetitle-small;
	font-weight: $sitetitle-weight;
	letter-spacing: $sitetitle-spacing;
	line-height: 1;
	color: $text-dark-color;
	margin-right: 60px;

	&:hover {
		color: $accent-color;
	}

	@include mq(tabletp) {
		font-size: $sitetitle-medium;
	}

	@include mq(tabletl) {
		margin-right: 0;
	}

	@include mq(laptop) {
		font-size: $sitetitle-large;
	}
}

.header__tagline {
	margin-top: 20px;
	font-size: $sitetagline-small;
	font-weight: $sitetagline-weight;
	letter-spacing: $sitetagline-spacing;
	line-height: $sitetagline-lineheight;
	color: $text-medium-color;

	@include mq(tabletp) {
		font-size: $sitetagline-medium;
	}

	@include mq(laptop) {
		margin-top: 30px;
		font-size: $sitetagline-large;
	}
}



// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Menu

.menu {
	
	@include mq(tabletl) {
		margin-top: 20px;
	}

	@include mq(laptop) {
		margin-top: 30px;
	}
}

.menu__toggle {
	position: absolute;
	z-index: 1002;
	top: 20px;
	right: 20px;
	cursor: pointer;
	font-size: 15px;
	line-height: 20px;
	color: $text-dark-color;

	@include mq(tabletp) {
		top: 40px;
		right: 40px;
	}
	
	@include mq(tabletl) {
		display: none;
	}
}

.menu__toggle__icon {
	float: right;
	position: relative;
	width: 24px;
	height: 20px;
	margin-left: 8px;

	span, span:before, span:after {
		content: '';
		position: absolute;
		top: 8px;
		left: 0;
		width: 100%;
		height: 3px;
		@include transition(all 0.1s);
		background: $text-dark-color;
	}

	span:before {
		top: -8px;
	}

	span:after {
		top: 8px;
	}
}

.menu--open .menu__toggle__icon {

	span:before, span:after {
		background: $overlay-text-color !important;
	}
		
	span {
		background-color: transparent !important;
	}
	
	span:before,
	span:after {
		top: 0;
	}
	
	span:before {
		@include rotate(45);
	}

	span:after {
		@include rotate(-45);
	}
}

.menu__wrap {
	position: fixed;
	z-index: 1000;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba($overlay-background-color,0.95);
	overflow: auto;

	visibility: hidden;
	opacity: 0;
	@include transition(all 0.2s ease-in-out);

	@include mq(tabletl) {
		position: relative;
		background: transparent;
		visibility: visible;
		overflow: visible;
		opacity: 1;
		@include transition(none);
	}
}

.menu--open .menu__wrap {
	visibility: visible;
	opacity: 1;
}

.menu__list {
	list-style: none;
	margin: 0 auto;
	padding: 12px 20px;

	@include mq(tabletp) {
		padding: 30px 40px;
	}

	@include mq(tabletl) {
		margin: 0;
		padding: 0;
	}
}

.menu__list__item {

}

.menu__list__item__link {
	font-size: $menu-small;
	font-weight: $menu-weight;
	color: $overlay-text-color;
	padding: 10px 0;

	&:hover {
		color: $overlay-accent-color;
	}

	@include mq(tabletl) {
		padding: 0;
		font-size: $menu-medium;
		color: $text-dark-color;

		&:hover {
			color: $accent-color;
		}
	}

	@include mq(laptop) {
		font-size: $menu-large;
	}
	
	&.active-link {
		color: $overlay-accent-color;

		@include mq(tabletl) {
			color: $accent-color;
		}
	}
}

.menu__button {
	margin-top: 15px;
	padding: 15px 20px 16px;
	font-size: 13px;

	@include mq(tabletl) {
		margin-top: 0;
		padding: 11px 20px 12px;
		font-size: 15px;
	}
}



// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Projects menu

.projects-menu {
	display: none;
	
	@include mq(tabletl) {
		display: block;
		margin-top: 20px;
	}

	@include mq(laptop) {
		margin-top: 30px;
	}
}



// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Lower

.header__lower {
	display: none;

	@include mq(tabletl) {
		display: block;
		position: absolute;
		bottom: 30px;
		left: 40px;
	}

	@include mq(laptop) {
		bottom: 40px;
		left: 60px;
	}
}

